--- a/index.html
+++ b/index.html
@@ -6139,7 +6139,7 @@ function __toVoucherPayload(payload){
 }
 
 </script>
-<!-- strict-compat patch: Cloudflare Worker proxy + NADI items normalization (kept separate to preserve original layout) -->
+<!-- strict-compat patch v3: Worker proxy + GET token + NADI normalize + voucher*.json intercept -->
 <script>
 (function(){'use strict';
   var META='gas-endpoint';
@@ -6152,19 +6152,61 @@ function __toVoucherPayload(payload){
   var endpoint=getEndpoint();
   window.__setWorkerEndpoint=function(url){ endpoint=String(url||'').trim(); try{localStorage.setItem('GAS_URL',endpoint);}catch(e){} };
 
+  function getToken(){
+    try{ return (localStorage.getItem('id_token')||'').trim(); }catch(e){ return ''; }
+  }
   function isGAS(url){
     try{ var u=new URL(url, location.href); return u.hostname==='script.google.com' && /\/macros\/s\//.test(u.pathname); }catch(e){ return false; }
   }
+  function isVoucherJson(url){
+    try{ var u=new URL(url, location.href); return /voucher.*\.json$/i.test(u.pathname); }catch(e){ return false; }
+  }
+
+  async function buildVoucherICSetJSON(){
+    if (!window.RUMUS || !window.RUMUS.api) return { ics: [] };
+    try {
+      const acts = await window.RUMUS.api.getNadiActivities();
+      const data = (acts && acts.data) || [];
+      const ids = data.map(a => String(a.activityId||'')).filter(Boolean);
+      const set = new Set();
+      for (const id of ids) {
+        const det = await window.RUMUS.api.getNadiActivityDetail(id);
+        const rows = (det && det.data) || [];
+        for (const r of rows) {
+          const apt = String(r.appointmentType||'').toUpperCase();
+          const ic = String(r.noIC||'').trim();
+          if (apt==='VOUCHER' && ic) set.add(ic);
+        }
+      }
+      return { ics: Array.from(set) };
+    } catch(err) {
+      console.error('voucher*.json intercept build failed:', err);
+      return { ics: [] };
+    }
+  }
+
   var _fetch=window.fetch.bind(window);
-  window.fetch = function(input, init){
+  window.fetch = async function(input, init){
     var url = (typeof input==='string') ? input : (input && input.url) || '';
     if (!url) return _fetch(input, init);
+
+    // Intercept voucher*.json to avoid 404 HTML -> JSON parse error
+    if (isVoucherJson(url)) {
+      const payload = await buildVoucherICSetJSON();
+      return new Response(JSON.stringify(payload), { headers: { 'Content-Type':'application/json' } });
+    }
+
     if (isGAS(url)) {
-      var m = (init && init.method) || 'GET';
-      if (m.toUpperCase()==='GET') {
+      var method = (init && init.method) || 'GET';
+      if (method.toUpperCase()==='GET') {
         var qs = '';
         try{ var u = new URL(url, location.href); qs = u.search.slice(1); }catch(e){ qs=''; }
         var prox = endpoint + (endpoint.indexOf('?')>=0 ? '&' : '?') + qs;
+        // Inject id_token into GET if missing
+        if (!(/[?&]id_token=/.test(prox))) {
+          var tok = getToken();
+          if (tok) prox += (prox.indexOf('?')>=0 ? '&' : '?') + 'id_token=' + encodeURIComponent(tok);
+        }
         return _fetch(prox, { method:'GET' });
       } else {
         var body = (init && init.body) || '';
@@ -6172,7 +6214,8 @@ function __toVoucherPayload(payload){
           try{ if (body && body.toString) body = body.toString(); }catch(e){ body=''; }
         }
         var p = new URLSearchParams(String(body||''));
-        try{ var tok = localStorage.getItem('id_token'); if (tok && !p.get('id_token')) p.set('id_token', tok); }catch(e){}
+        var tok = getToken();
+        if (tok && !p.get('id_token')) p.set('id_token', tok);
         return _fetch(endpoint, {
           method:'POST',
           headers: { 'Content-Type':'application/x-www-form-urlencoded' },
@@ -6224,7 +6267,7 @@ function __toVoucherPayload(payload){
     return items.map(norm);
   };
 
-  // Jika wujud RUMUS.post, patch hanya untuk action saveNadiProgramActivity
+  // Patch RUMUS.post untuk saveNadiProgramActivity
   if (window.RUMUS && typeof window.RUMUS.post==='function') {
     var _post = window.RUMUS.post.bind(window.RUMUS);
     window.RUMUS.post = function(action, params){
